k8s/helm/triggerdev/routing/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: triggerdev
  namespace: istio-ingress
spec:
  hosts:
    - "triggerdev.local"
  gateways:
    - istio-ingress/main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: trigger-webapp.triggerdev.svc.cluster.local
            port:
              number: 3030
